--- a/.README.md
+++ b/.README.md
@@ -1,1 +1,12 @@
 Deyler, Omar Vivas: Tengo 26 años Soy de venezuela pero vivo en colombia , actualmente trabajo para una multinacional canadiense en la parte de logistica y desde niño siempre me ha apasionado el area de la tecnologia pero en los dos ultimos años he sentido ese llamado interno, ese 6to sentido que me dice hacele y estoy muy ilusionado con poder sacar esta carrera adelante, para desarrollarme mucho mas profesionalmente.
+
+1. Spring : 
+Somos Mundo Tech, Una compania especializada en la distribucion y comercializacion telefonia celular y accesorios tecnologicos con las mejores marcas y accesorios del mercado para todo tipo de público, Ofrecemos a nuestros clientes la comodidad de comprar desde cualquier ubicación, con una variedad de productos al alcance de solo unos clics. ademas tenemos ofertas y promociones de temporada para que todos nuestros clientes disfruten de los mejores precios y tambien contamos con el equipo de servicio al cliente, disponible para responder cualquier pregunta o inquietud. visitanos y vive la nueva forma de comprar tus equipos de tecnologia porque mas alla de vender un producto, nosostros regalamos experiencias . :D
+
+Paginas de referencias :
+https://celularesenlinea.com/iniciar-sesion?back=my-account
+https://www.megatiendavirtual77.co/
+https://micelu.co/#
+https://hsi.com.co/carrito/
+https://www.phonelectrics.com/
+
