front head header

--- a/.README.md
+++ b/.README.md
@@ -3,6 +3,8 @@ Deyler, Omar Vivas: Tengo 26 años Soy de venezuela pero vivo en colombia , actu
 1. Spring : 
 Somos Mundo Tech, Una compania especializada en la distribucion y comercializacion telefonia celular y accesorios tecnologicos con las mejores marcas y accesorios del mercado para todo tipo de público, Ofrecemos a nuestros clientes la comodidad de comprar desde cualquier ubicación, con una variedad de productos al alcance de solo unos clics. ademas tenemos ofertas y promociones de temporada para que todos nuestros clientes disfruten de los mejores precios y tambien contamos con el equipo de servicio al cliente, disponible para responder cualquier pregunta o inquietud. visitanos y vive la nueva forma de comprar tus equipos de tecnologia porque mas alla de vender un producto, nosostros regalamos experiencias . :D
 
+Slogan: Mas que un producto. un estilo de vida .
+
 Paginas de referencias :
 https://celularesenlinea.com/iniciar-sesion?back=my-account
 https://www.megatiendavirtual77.co/
