retrospectives & trello link

--- a/.README.md
+++ b/.README.md
@@ -12,3 +12,6 @@ https://micelu.co/#
 https://hsi.com.co/carrito/
 https://www.phonelectrics.com/
 
+
+Tablero de trello:
+https://trello.com/b/EWh2khrf/mundo-tech-dashboard
